--- a/Escape game/style.css
+++ b/Escape game/style.css
@@ -1,5 +1,5 @@
 body{
-    background-image:url("1.gif");
+    background-image:url("imgs/1.gif");
     background-repeat: no-repeat;
     background-size: cover;
     /* background-position: 80% 3%; */
